# OpenKJ

./: .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile.debian  Dockerfile.fedora  OpenKJ.pro  README.md  appicon.rc  appveyor.yml
.github/: FUNDING.yml
.github/workflows/: auto-update-versions-from-tag.yml  codeql-analysis.yml  linux-testbuild.yml  macos-build.yml  macos-test.yml  windows-build-x86.yml  windows-build.yml  windows-builds.yml  windows-pr-buildtest.yml  windows-pr.yml  windows-test.yml
BreakMusic/: BreakMusic.pro  BreakMusic.rc  abstractaudiobackend.cpp  audiobackendgstreamer.cpp  audiobackendgstreamer.h  audiobackendqtmultimedia.cpp  audiobackendqtmultimedia.h  audiopasshtru.cpp  audiopasshtru.h  audioprocproxyiodevice.cpp  bmabstractaudiobackend.cpp  bmabstractaudiobackend.h  bmaudiobackendgstreamer.cpp  bmaudiobackendgstreamer.h  bmdbdialog.cpp  bmdbdialog.ui  bmdbitemdelegate.cpp  bmdbtablemodel.cpp  bmdbupdatethread.cpp  bmipcserver.cpp  bmipcserver.h  bmplaylist.cpp  bmplaylist.h  bmsettings.cpp  bmsettings.h  bmsong.cpp  bmsong.h  bmsourcedir.cpp  bmsourcedir.h  breakmusic.desktop  databasedialog.cpp  databasedialog.h  databasedialog.ui  databaseupdatethread.cpp  databaseupdatethread.h  dbitemdelegate.cpp  dbitemdelegate.h  dbtablemodel.cpp  dbtablemodel.h  dbupdatethread.cpp  (+27 more)
BreakMusic/icons/: BreakMusic.icns
BreakMusic/old/: bmabstractaudiobackend.cpp  bmabstractaudiobackend.h  bmaudiobackendgstreamer.cpp  bmaudiobackendgstreamer.h
BreakMusic/smbPitchShift/: smbPitchShift.fftw3.cpp  smbPitchShift.fftw3.h
KaraokeHost/: CSSound.cpp  CSSound.h  GSSound.cpp  GSSound.h  KaraokeHost.pro  KaraokeHost.rc  abstractaudiobackend.cpp  abstractaudiobackend.h  audiobackendgstreamer.cpp  audiobackendgstreamer.h  audiobackendhybrid.cpp  audiobackendhybrid.h  audiobackendqtmultimedia.cpp  audiobackendqtmultimedia.h  audioprocproxyiodevice.cpp  audioprocproxyiodevice.h  bmdbdialog.h  bmdbitemdelegate.h  bmdbtablemodel.h  bmdbupdatethread.cpp  bmplitemdelegate.cpp  bmplitemdelegate.h  cdgpreviewdialog.cpp  cdgpreviewdialog.h  cdgpreviewdialog.ui  cdgvideosurface.cpp  cdgvideosurface.h  cdgvideowidget.cpp  cdgvideowidget.h  cdgwindow.cpp  cdgwindow.h  cdgwindow.ui  databasedialog.cpp  databasedialog.h  databasedialog.ui  dbitemdelegate.cpp  dbitemdelegate.h  dbtablemodel.cpp  dbtablemodel.h  dbupdatethread.cpp  (+126 more)
KaraokeHost/libCDG/include/: CDG_Frame_Image.h  libCDG.h  libCDG_Color.h  libCDG_Frame_Image.h
KaraokeHost/libCDG/src/: CDG_Frame_Image.cpp  libCDG.cpp  libCDG_Color.cpp  libCDG_Frame_Image.cpp
KaraokeHost/smbPitchShift/: smbPitchShift.fftw3.cpp  smbPitchShift.fftw3.h
OpenKJ/: .OpenKJ.pro.swp  CMakeLists.txt  OpenKJ  OpenKJ.pro  abstractaudiobackend.cpp  abstractaudiobackend.h  aspectratiowidget.cpp  aspectratiowidget.h  audiobackendgstreamer.cpp  audiobackendgstreamer.h  audiofader.cpp  audiofader.h  audiorecorder.cpp  audiorecorder.h  bmdbdialog.cpp  bmdbdialog.h  bmdbdialog.ui  bmdbitemdelegate.cpp  bmdbitemdelegate.h  bmdbtablemodel.cpp  bmdbtablemodel.h  bmdbupdatethread.cpp  bmdbupdatethread.h  bmplitemdelegate.cpp  bmplitemdelegate.h  bmpltablemodel.cpp  bmpltablemodel.h  cdgdisplay.cpp  cdgdisplay.h  cdgvideosurface.cpp  cdgvideosurface.h  cdgvideowidget.cpp  cdgvideowidget.h  chatmessageswidget.cpp  chatmessageswidget.h  customlineedit.h  custompatternsmodel.cpp  custompatternsmodel.h  dbitemdelegate.cpp  dbitemdelegate.h  (+174 more)
OpenKJ/Icons/: KaraokeHost.icns  OpenKJ.icns
OpenKJ/Icons/okjbreeze-dark/: dark2light
OpenKJ/cdg/: cdgappsrc.cpp  cdgfilereader.cpp  cdgfilereader.h  cdgimageframe.cpp  cdgimageframe.h  libCDG.h
OpenKJ/gstreamer/: gstreamerhelper.cpp  gstreamerhelper.h
OpenKJ/libCDG/include/: libCDG.h  libCDG_Color.h  libCDG_Frame_Image.h
OpenKJ/libCDG/src/: cdgfilereader.cpp  cdgfilereader.h  cdgimageframe.cpp  cdgimageframe.h  libCDG.cpp  libCDG_Color.cpp  libCDG_Frame_Image.cpp
OpenKJ/rpm/: openkj.spec
OpenKJ/runguard/: runguard.cpp  runguard.h
appveyor/: build_windows.cmd  cscrt.7z  openkj_x86.iss  openkj_x86_64.iss
cd/: openkj32.iss  openkj64.iss
debian/: changelog  changelog_BASE_180304  changelog_LOCAL_180304  control  debhelper-build-stamp  files  openkj.substvars  rules
debian/openkj/DEBIAN/: control  md5sums
flatpak/: org.openkj.OpenKJ.yml
installer/OpenKJ/config/: config.xml
macos/: components.plist
miniz/: README  miniz.cpp  miniz.h  miniz.pro
misc/: windowsguid.txt
quazip/: quazip.pro  quazipfile.cpp
rpm/: blackPanther-openkj.spec  openkj.spec
src/: .gitignore  OpenKJ.pro  appicon.aps  appicon.rc  audiofader.cpp  audiofader.h  audiorecorder.cpp  audiorecorder.h  bmdbdialog.cpp  bmdbdialog.h  bmdbdialog.ui  bmdbupdatethread.cpp  bmdbupdatethread.h  customlineedit.cpp  customlineedit.h  custompattern.cpp  custompattern.h  dbupdater.cpp  dbupdater.h  dbupdatethread.cpp  dbupdatethread.h  directorymonitor.cpp  directorymonitor.h  dlgaddsinger.cpp  dlgaddsinger.h  dlgaddsong.cpp  dlgaddsong.h  dlgaddsong.ui  dlgbookcreator.cpp  dlgbookcreator.h  dlgcdg.cpp  dlgcdg.h  dlgcdg.ui  dlgcustompatterns.cpp  dlgcustompatterns.h  dlgcustompatterns.ui  dlgdatabase.cpp  dlgdatabase.h  dlgdbupdate.cpp  dlgdbupdate.h  (+82 more)
src/cdg/: cdgappsrc.cpp  cdgappsrc.h  cdgfilereader.cpp  cdgfilereader.h  cdgimageframe.cpp  cdgimageframe.h
src/gstreamer/: gstreamerhelper.cpp
src/models/: tablemodelbreaksongs.cpp  tablemodelbreaksongs.h  tablemodelcustomnamingpatterns.cpp  tablemodelcustomnamingpatterns.h  tablemodelhistorysingers.cpp  tablemodelhistorysingers.h  tablemodelhistorysongs.cpp  tablemodelhistorysongs.h  tablemodelkaraokesongs.cpp  tablemodelkaraokesongs.h  tablemodelkaraokesourcedirs.cpp  tablemodelkaraokesourcedirs.h  tablemodelplaylistsongs.cpp  tablemodelplaylistsongs.h  tablemodelqueuesongs.cpp  tablemodelqueuesongs.h  tablemodelrequests.cpp  tablemodelrequests.h  tablemodelrotation.cpp  tablemodelrotation.h  tablemodelsongshopsongs.cpp  tablemodelsongshopsongs.h
src/runguard/: runguard.cpp
travis/: before_install.sh  build.sh  install.sh  openkjdmg.json
(+2 files in other folders)
